--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,6 +13,7 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     python -m pip install --upgrade build setuptools twine
+    python -m pip install --upgrade artifacts-keyring
     python setup.py sdist bdist_wheel
   displayName: 'Install dependencies'
   
