--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,5 +24,5 @@ steps:
     artifactFeed: ado-wheel-pkg-feed
 
 - script: |
-    twine upload -r ado-wheel-pkg-feed --config-file $(PYPIRC_PATH) dist/*.whl
+    twine upload -r ado-wheel-pkg-feed dist/*
   displayName: 'Push to Artifacts'
