--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,6 +2,10 @@
 trigger:
 - main
 
+variables:
+- name: PYPIRC_PATH
+  value: .pypirc
+
 pool: Self-Hosted-Pool
 
 steps:
@@ -13,7 +17,7 @@ steps:
 - script: |
     python -m pip install --upgrade pip
     python -m pip install --upgrade build setuptools twine
-    pip install twine keyring artifacts-keyring
+    python -m pip install twine keyring artifacts-keyring
     echo %PYPIRC_PATH%
     echo %USERNAME%
     python setup.py sdist bdist_wheel
@@ -24,5 +28,5 @@ steps:
     artifactFeed: ado-wheel-pkg-feed
 
 - script: |
-    twine upload -r ado-wheel-pkg-feed dist/*
+    python -m twine upload -r ado-wheel-pkg-feed --config-file $(PYPIRC_PATH) dist/*.whl
   displayName: 'Push to Artifacts'
