--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,4 +28,4 @@ steps:
 
 - script: |
     python -m twine upload -r ado-wheel-pkg-feed --config-file $(PYPIRC_PATH) dist/*.whl
-  displayName: 'Push to Artifacts'
+  displayName: 'Push to Artifacts1'
